# dml

./: .gitignore  .travis.yml  Makefile  README  README.md
analysis/: heron.m
int/: Makefile  constants.f90  dml_int.f90  doxconf  functions.f90  gleg.f90  interfaces.f90  mainpage.dox  makefile  mc.f90  romberg.f90  simpson.f90  trapezoid.f90
mat/: Makefile  dml_mat.f90  doxconf  gaujor.f90  gaussel.f90  gram.f90  jacobi.f90  mainpage.dox  makefile
opt/: Makefile  bisect.f90  dml_opt.f90  doxconf  functions.f90  interfaces.f90  mainpage.dox  makefile  nreqs.f90  nrmin.f90  nroots.f90  qinterp.f90  regfalsi.f90
pde/: README.md
pde/1_scilab/: computeL.sci  computeLnonl.sci  computeLpot.sci  ej3.sce  ej4.sce  ej5.sce  ej6.sce  execution.sce  fourier_to_real.sci  poisson.sci  real_to_fourier.sci  solve_constant_coeff.sci  solve_eig.sci  solve_nonconstant_coeff.sci  solve_nonlin_coeff.sci  solve_nonlinear.sci  test_fft.sce  test_time_fft.sci
pde/2_plaincpp/: Makefile  main.cpp
pde/3_armacpp/: CMakeLists.txt  README  compile.sh  main.cpp  plot.gnu
pde/4_arma_fftw/: CMakeLists.txt  compile.sh  main.cpp
